# job-search-llm-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  schedule.yml
app/job_search_llm_agent/: agent.py  config.py  embedder.py  logging_setup.py
app/scripts/: bootstrap.py  run_once.sh
app/tests/: test_imports.py  test_smoke.py
docs/: plan.md
infra/docker/: Dockerfile
infra/fly/: fly.toml
job_search_llm_agent/: fetcher.py  storage.py  utils.py
scripts/: bootstrap.sh  run_once.sh
src/: agent.py  storage.py
tests/: test_imports.py
