[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "job_search_llm_agent"
version = "0.0.1"
description = "Automated agent to fetch, embed, and rank job postings."
authors = ["Halston Lim"]
readme = "README.md"
packages = [{include = "job_search_llm_agent", from = "app"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "^0.4.0"
taskipy = "^1.12.0"  # lightweight task runner
pytest-cov = "^6.1.1"

[tool.poetry.scripts]
bootstrap = "app.scripts.bootstrap:main"

[tool.taskipy.tasks]
lint = "ruff check app"
format = "ruff format app"
test = "pytest -q" 